welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse()
avance()
leveBrosse()
baisseBrosse()
avance()
leveBrosse()
baissebrosse()
droite()
leveBrosse()
baisseBrosse()
droite()
levebrosse()
baisseBrosse()
recule()
leveBrosse()
baisseBrosse()
recule()
levebrosse()
baisseBrosse()
gauche()
leveBrosse()
avance()
